Fixed issue with fontsize being too big on ultrawide monitors

--- a/src/main.css
+++ b/src/main.css
@@ -42,8 +42,7 @@
     background-color: #1E1E1E;
 }
 
-#homeContainer {
-}
+#homeContainer {}
 
 #homeRow {
     min-height: 90vh;
@@ -55,6 +54,18 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+#slogan {
+    font-size: 70px;
+    font-weight: 900;
+    color: #E3E0D3;
+}
+
+#skills {
+    color: #7B7A6F;
+    font-weight: 600;
+    font-size: 40px;
 }
 
 #profileName {
@@ -106,4 +117,16 @@
     margin: 0;
     padding: 10px;
     font-size: 12px;
+}
+
+
+
+@media (max-width: 768px) {
+    #slogan {
+        font-size: 60px;
+    }
+
+    #skills {
+        font-size: 30px;
+    }
 }
